--- a/src/views/projects/projects.css
+++ b/src/views/projects/projects.css
@@ -1,6 +1,16 @@
 @keyframes projectAnim{
 	from{
-		transform: translateY(38px);
+		opacity: 0.8;
+		transform: translateY(380px);
+	}
+	to{
+		opacity: 1;
+		transform: translateY(0);
+	}	
+}
+@keyframes projectAnimBottom{
+	from{
+		transform: translateY(-38px);
 	}
 	to{
 		transform: translateY(0);
@@ -11,6 +21,11 @@ v-project{
 	display: block;
 	transform-origin: top;
 }
+
+.other v-project{
+	animation: projectAnimBottom 500ms;
+}
+
 
 v-projects{
 /*	font-size: 26px;*/
@@ -114,10 +129,10 @@ v-button[active]{
 
 @keyframes titleAddedAnim{
 	from{
-		margin-top: -80px;
+		margin-bottom: 180px;
 	}
 	to{
-		margin-top: 0;
+		margin-bottom: 60px;
 
 	}
 
@@ -147,8 +162,16 @@ v-projects .projects .list> .title{
 	
 }
 
+v-projects .projects .list > .title{
+	margin-bottom: 60px;
+	margin-top: 40px;
+}
+
+v-projects .projects .list.selecteds > .title{
+	animation: titleAddedAnim 1300ms;
+}
+
 v-projects .projects .list:first-child > .title{
-	animation: titleAddedAnim 300ms;
 	margin-top: 0;
 }
 
@@ -170,6 +193,7 @@ v-projects .projects .list > .title{
 .project{
 	display: flex;
 	flex-direction: column;
+	scroll-behavior: smooth;
 	align-items: flex-start;
 	padding: 32px 19px 32px 32px;
 	gap: 24px;
