--- a/src/views/projects/projects.css
+++ b/src/views/projects/projects.css
@@ -59,6 +59,7 @@ v-projects .projectsColumn {
 	flex: 1;
 	height: 100%;
 	overflow-y: scroll;
+	padding-bottom: 70vh;
 }
 
 .projectsColumn{
@@ -76,10 +77,26 @@ v-projects .projectsColumn {
 	align-items: center;
 	flex-direction: 100%;
 	height: 80px;
+	overflow-x: scroll;
 }
+.activeSkills::-webkit-scrollbar {
+  height: 3px;
+}
+
+.activeSkills::-webkit-scrollbar-track {
+  background: #0000;
+}
+.activeSkills::-webkit-scrollbar-thumb {
+  background: #ddd7;
+}
+.activeSkills::-webkit-scrollbar-thumb:hover {
+  background: #ddda;
+}
+
 
 .activeSkills v-button{
 	transform-origin: left;
+	min-width: min-content;
 }
 /*.activeSkills v-button[active]{
 	transition: 400ms;
@@ -89,10 +106,10 @@ v-projects .projectsColumn {
 
 .activeSkills v-button{
 	animation: activeSkillInserted 200ms;
-	transition: transform 150ms, margin-right 0ms;
+	transition: transform 150ms, margin-right 200ms;
 }
 .activeSkills v-button:hover{
-	transition: all 800ms, margin-right 0ms;
+	transition: all 800ms, transform 0ms, margin-right 0ms;
 }
 
 @keyframes activeSkillInserted{
