--- a/src/views/switching.css
+++ b/src/views/switching.css
@@ -10,7 +10,11 @@
     opacity: 0;
  }
 
- .loading + #switcherElement{
- 	opacity: 0.2;
-    transition: 700ms;
- }
+/* .loading + #switcherElement{*/
+/*   opacity: 1;*/
+/*   transition: 700ms;*/
+/* }*/
+
+/*#content[openTab=""] + #switcherElement{*/
+/*	opacity: 0.4;*/
+/* }*/
