add sub categories for skills other than categories; more skills and connections;

--- a/src/views/projects/projects.css
+++ b/src/views/projects/projects.css
@@ -339,3 +339,8 @@ v-projects .projects .list > .title{
 	padding-bottom: 7px;
 }
 
+
+
+v-button.subCat, v-button.category{
+	--passive: #121212
+}
