--- a/src/views/cv/cv.css
+++ b/src/views/cv/cv.css
@@ -4,10 +4,10 @@ v-cv .content{
 
 v-cv a.openPDF{
 	position: fixed;
-	transform-origin: bottom;
+/*	transform-origin: bottom;*/
 	left: 50%;
 	transform: translateX(-50%);
-	transition: all 200ms, bottom 3000ms;
+	transition: all 300ms, bottom 3000ms;
 
 	padding: 20px 35px;
 	text-decoration: none;
@@ -24,7 +24,7 @@ v-cv.open a.openPDF{
 }
 
 v-cv a.openPDF:hover{
-	transform: translateX(-50%) scale(1.2);
+	transform: translateX(-50%) translateY(-20%) ;
 	background-color: #aaddff;
 }
 
