--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -16,6 +16,35 @@ v-sidebar a img{
 	pointer-events: none;
 }
 
+v-sidebar a{
+	text-decoration: none;
+}
+v-sidebar a > span{
+	font-family: 'Open Sans';
+	position: absolute;
+	top: 100%;
+	color: #a1a1a1;
+	cursor: default;
+	font-size: 0;
+	opacity: 0;
+	transition: 200ms;
+	pointer-events: none;
+	margin-top: -10px; /*the gap was 10px*/
+/*	transition-delay: 500ms;*/
+}
+/*v-sidebar a[active] > span,*/
+v-sidebar a:hover > span{
+/*	transition: 200ms;*/
+/*	transition-delay: 0;*/
+/*	transition-delay: 300ms;*/
+	font-size: 13px;
+	opacity: 1;
+}
+v-sidebar a[active] > span{
+	font-size: 0;
+	opacity: 0;
+}
+
 v-sidebar {
 
 /*	translucency for blur effect while turning #1a1a1a into #101010	*/
@@ -301,3 +330,5 @@ v-sidebar[v9="1"]:hover .circle1 {
 
 	}
 }
+
+
