--- a/src/sidebar/mobile.css
+++ b/src/sidebar/mobile.css
@@ -14,15 +14,14 @@
 		flex-direction: row;
 		width: 100%;
 		height: 80px;
-		.content{
-			flex-direction: row;
-		}
-		.header{
-			display: none;
-		}
 	}
 
-
+	v-sidebar .content{
+			flex-direction: row;
+	}
+	v-sidebar .header{
+			display: none;
+	}
 
 	/* .content div in v-elements*/
 	#content > * > .content{
